--- a/index.html
+++ b/index.html
@@ -17,16 +17,21 @@
         <img src="./user.png">
        </div>
     </header>
+    <section>
+
+    </section>
     <main>
-<div>
+<div id="category-section">
     
 </div>
-<div>
+<div id="product-section">
 
 </div>
-    </main>
+ </main>   
     <footer>
 
     </footer>
 </body>
 </html>
+
+<script src="./index.js"></script>
