--- a/admin/dashboard/dashboard.html
+++ b/admin/dashboard/dashboard.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<!-- Website - www.codingnepalweb.com -->
+
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
-    <title>Responsiive Admin Dashboard | CodingLab</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    
+  <title>Responsiive Admin Dashboard | CodingLab</title>
     <link rel="stylesheet" href="style.module.css" />
     <!-- Boxicons CDN Link -->
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
@@ -129,7 +133,7 @@
           </div>
           <div class="box">
             <div class="right-side">
-              <div class="box-topic">Total Profit</div>
+              <div class="box-topic">Today's sale</div>
               <div class="number">$12,876</div>
               <div class="indicator">
                 <i class="bx bx-up-arrow-alt"></i>
@@ -140,7 +144,7 @@
           </div>
           <div class="box">
             <div class="right-side">
-              <div class="box-topic">Total Return</div>
+              <div class="box-topic">Last week sale</div>
               <div class="number">11,086</div>
               <div class="indicator">
                 <i class="bx bx-down-arrow-alt down"></i>
