fixed navbar functionality in search page & fixed conflicts

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VogueCart</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/navbar.module.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
     <link
       rel="shortcut icon"
-      href="images/VOUGECART_light.png"
+      href="/B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
       type="image/x-icon"
     />
   </head>
@@ -69,7 +70,11 @@
             <option value="womens-shoes">Womens Shoes</option>
             <option value="womens-watches">Womens Watches</option>
           </select>
-          <input type="text" id="search-input" placeholder="Search product here..." />
+          <input
+            type="text"
+            id="search-input"
+            placeholder="Search product here..."
+          />
           <button id="search-button"><i class="ri-search-2-line"></i></button>
         </div>
 
@@ -92,4 +97,6 @@
     <footer></footer>
   </body>
 </html>
+
 <script src="./js/index.js"></script>
+<script src="./js/navbar.js"></script>
