Added footer to the user pages

--- a/users/products/Searchlist.html
+++ b/users/products/Searchlist.html
@@ -96,6 +96,7 @@
     </style>
     <link rel="stylesheet" href="../../css/navbar.module.css" />
     <link rel="stylesheet" href="../../css/font.module.css" />
+    <link rel="stylesheet" href="../../css/footer.module.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -187,6 +188,53 @@
       <div id="product-section"></div>
       <div id="show-more-btn">Show More</div>
     </main>
+    <footer class="main-width">
+      <div class="logo-links">
+        <div class="footer-about">
+          <img
+            src="/B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
+            alt="Logo"
+          />
+          <h3>
+            Your One-Stop Destination for Everything You Need, Anytime,
+            Anywhere!
+          </h3>
+          <p>VogueCart, 2025.</p>
+        </div>
+
+        <div class="footer-links">
+          <ul>
+            <li class="footer-link-headings">COMPANY</li>
+            <li class="nav-links">About</li>
+            <li class="nav-links">Careers</li>
+            <li class="nav-links">Partners</li>
+          </ul>
+          <ul>
+            <li class="footer-link-headings">HELP</li>
+            <li class="nav-links">Shipping</li>
+            <li class="nav-links">Payments</li>
+            <li class="nav-links">Cancellations & Returns</li>
+          </ul>
+          <ul>
+            <li class="footer-link-headings">LEGAL</li>
+            <li class="nav-links">Terms of Service</li>
+            <li class="nav-links">Privacy Policy</li>
+            <li class="nav-links">Cookies Policy</li>
+            <li class="nav-links">Security</li>
+          </ul>
+        </div>
+      </div>
+      <hr />
+      <div class="copyright">
+        <p>&copy; 2025 VagueCart Inc. All rights reserved.</p>
+        <div class="footer-socials">
+          <a href="#"><i class="ri-facebook-circle-fill"></i></a>
+          <a href="#"><i class="ri-twitter-fill"></i></a>
+          <a href="#"><i class="ri-instagram-fill"></i></a>
+          <a href="#"><i class="ri-youtube-fill"></i></a>
+        </div>
+      </div>
+    </footer>
 
     <script>
       let products = [];
