--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>VogueCart</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./css/navbar.module.css" />
+    <link rel="stylesheet" href="./css/footer.module.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -97,18 +98,104 @@
           <p>See more</p>
         </div>
         <div class="category-list-div">
-          <div> <img src="https://i.pinimg.com/564x/54/e1/01/54e101f2db45f0d5088ad9181d69bb8f.jpg"/> <p>Men's Shirt</p>  </div>
-          <div> <img src="https://i5.walmartimages.com/seo/FAVIPT-Victorian-Dress-Women-Clearance-1800S-Medieval-Renaissance-Corset-Square-Neck-Vintage-Maxi-Cocktail-Party-Ball-Gown-Plus-Size-Halloween-Cospla_87b00c21-2870-43d4-9f65-eaeb68670bf8.a21f57741abf79a91fb53c3881ded74f.jpeg?odnHeight=768&odnWidth=768&odnBg=FFFFFF"/> <p>Women's Dress</p>  </div>
-          <div> <img src="https://s.alicdn.com/@sc04/kf/H3ad4f3f3cb2e48009a4c28e2693796a3w.jpg_720x720q50.jpg"/> <p>Beauty</p>  </div>
-          <div> <img src="https://image.made-in-china.com/2f0j00FTCoBjZGMykP/Luxury-50ml-Square-Fragrance-Glass-Perfume-Refill-Spray-Bottle-50-Ml-for-Perfumes-Cologne.webp"/> <p>Fragrance</p>  </div>
-          <div> <img src="https://s.alicdn.com/@sc04/kf/H1daa7623a1cf460d9bd037eb88b439far.jpg_720x720q50.jpg"/> <p>Groceries</p>  </div>
-          <div> <img src="https://m.media-amazon.com/images/I/61ipcFNLNJL._AC_UF894,1000_QL80_.jpg"/> <p>Kitchen Accessories</p>  </div>
-          <div> <img src="https://s.alicdn.com/@sc04/kf/H8deb86cb67f846ad8c650f47380bf465n.jpg_300x300.jpg"/> <p>Laptops</p>  </div>
-          <div> <img src="https://static.vecteezy.com/system/resources/previews/025/254/119/non_2x/realistic-smartphone-on-square-podium-3d-mobile-phone-with-gradient-screen-mockup-modern-cell-phone-vector.jpg"/> <p>Smartphones</p>  </div>
+          <div>
+            <img
+              src="https://i.pinimg.com/564x/54/e1/01/54e101f2db45f0d5088ad9181d69bb8f.jpg"
+            />
+            <p>Men's Shirt</p>
+          </div>
+          <div>
+            <img
+              src="https://i5.walmartimages.com/seo/FAVIPT-Victorian-Dress-Women-Clearance-1800S-Medieval-Renaissance-Corset-Square-Neck-Vintage-Maxi-Cocktail-Party-Ball-Gown-Plus-Size-Halloween-Cospla_87b00c21-2870-43d4-9f65-eaeb68670bf8.a21f57741abf79a91fb53c3881ded74f.jpeg?odnHeight=768&odnWidth=768&odnBg=FFFFFF"
+            />
+            <p>Women's Dress</p>
+          </div>
+          <div>
+            <img
+              src="https://s.alicdn.com/@sc04/kf/H3ad4f3f3cb2e48009a4c28e2693796a3w.jpg_720x720q50.jpg"
+            />
+            <p>Beauty</p>
+          </div>
+          <div>
+            <img
+              src="https://image.made-in-china.com/2f0j00FTCoBjZGMykP/Luxury-50ml-Square-Fragrance-Glass-Perfume-Refill-Spray-Bottle-50-Ml-for-Perfumes-Cologne.webp"
+            />
+            <p>Fragrance</p>
+          </div>
+          <div>
+            <img
+              src="https://s.alicdn.com/@sc04/kf/H1daa7623a1cf460d9bd037eb88b439far.jpg_720x720q50.jpg"
+            />
+            <p>Groceries</p>
+          </div>
+          <div>
+            <img
+              src="https://m.media-amazon.com/images/I/61ipcFNLNJL._AC_UF894,1000_QL80_.jpg"
+            />
+            <p>Kitchen Accessories</p>
+          </div>
+          <div>
+            <img
+              src="https://s.alicdn.com/@sc04/kf/H8deb86cb67f846ad8c650f47380bf465n.jpg_300x300.jpg"
+            />
+            <p>Laptops</p>
+          </div>
+          <div>
+            <img
+              src="https://static.vecteezy.com/system/resources/previews/025/254/119/non_2x/realistic-smartphone-on-square-podium-3d-mobile-phone-with-gradient-screen-mockup-modern-cell-phone-vector.jpg"
+            />
+            <p>Smartphones</p>
+          </div>
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer class="main-width">
+      <div class="logo-links">
+        <div class="footer-about">
+          <img
+            src="/B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
+            alt="Logo"
+          />
+          <h3>
+            Your One-Stop Destination for Everything You Need, Anytime,
+            Anywhere!
+          </h3>
+          <p>VogueCart, 2025.</p>
+        </div>
+
+        <div class="footer-links">
+          <ul>
+            <li class="footer-link-headings">COMPANY</li>
+            <li class="nav-links">About</li>
+            <li class="nav-links">Careers</li>
+            <li class="nav-links">Partners</li>
+          </ul>
+          <ul>
+            <li class="footer-link-headings">HELP</li>
+            <li class="nav-links">Shipping</li>
+            <li class="nav-links">Payments</li>
+            <li class="nav-links">Cancellations & Returns</li>
+          </ul>
+          <ul>
+            <li class="footer-link-headings">LEGAL</li>
+            <li class="nav-links">Terms of Service</li>
+            <li class="nav-links">Privacy Policy</li>
+            <li class="nav-links">Cookies Policy</li>
+            <li class="nav-links">Security</li>
+          </ul>
+        </div>
+      </div>
+      <hr />
+      <div class="copyright">
+        <p>&copy; 2025 VagueCart Inc. All rights reserved.</p>
+        <div class="footer-socials">
+          <a href="#"><i class="ri-facebook-circle-fill"></i></a>
+          <a href="#"><i class="ri-twitter-fill"></i></a>
+          <a href="#"><i class="ri-instagram-fill"></i></a>
+          <a href="#"><i class="ri-youtube-fill"></i></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
 
