Added banner & category section in landing page

--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
         </div>
       </nav>
     </header>
-    <section></section>
+    <section class="background-banner">
+      <div class="background-layer" id="bg1"></div>
+      <div class="background-layer fade-out" id="bg2"></div>
+  </section>
     <main>
       <div id="category-section">
         <div class="category-header">
