fetching data in individual product page and implemented function of getting individual product

--- a/users/products/individualProduct.html
+++ b/users/products/individualProduct.html
@@ -82,82 +82,8 @@
       </div>
     </nav>
   </header>
-  <main>
-    <!-- product image -->
-    <section>
-      <div class="individual-product-image">
-        <img src="https://cdn.dummyjson.com/products/images/beauty/Essence%20Mascara%20Lash%20Princess/thumbnail.png" />
-      </div>
-    </section>
+  <main class="main">
 
-    <!-- product details -->
-    <section>
-      <div class="individual-product-intro">
-        <p>Visit Thirtting_Store</p>
-        <h2>Essentials Men's Regular-Fit Long-Sleeve Oxford Shirt</h2>
-        <div class="indiv-rate-review">
-          <p>4.9 Ratings</p>
-          <p>Reviews</p>
-        </div>
-      </div>
-      <!-- about -->
-      <div class="individual-product-about">
-        <p>About items</p>
-        <hr>
-        <!-- about in 2 column -->
-        <div class="product-about-col">
-          <div class="details">
-            <p><span>Brand: </span> </p>
-            <p><span>Category: </span> </p>
-            <p><span>Condition: </span></p>
-          </div>
-          <div class="details">
-            <p><span>Color: </span> </p>
-            <p><span>Material: </span></p>
-            <p><span>Heavy: </span></p>
-          </div>
-        </div>
-      </div>
-      <!-- description -->
-      <div class="individual-product-desc">
-        <h4>Description: </h4>
-        <p>dhhfhdjudu</p>
-        <p>Chat us if there is anything you need to ask about the product</p>
-      </div>
-      <!-- shipping infor -->
-      <div class="individual-shipping-details">
-        <h4>Shipping Information: </h4>
-        <p>Delivery: </p>
-        <p>Shipping: </p>
-        <p>Arrive: </p>
-      </div>
-    </section>
-
-    <section>
-      <div class="individual-product-order">
-        <h4>Set Order</h4>
-        <hr>
-        <div class="individual-product-order-details">
-          <div><img /></div>
-          <div>
-            <p>Selected Size </p>
-            <h4>XL (Extra Large)</h4>
-          </div>
-        </div>
-        <div class="individual-product-order-quantity">
-          <input type="number" placeholder="1" />
-          <p>Stock: 856</p>
-        </div>
-        <div class="individual-product-order-price">
-          <p>Total Price</p>
-          <p>$45.00</p>
-        </div>
-        <div class="individual-product-order-btn">
-          <button>Buy Now</button>
-          <button>Add to Cart</button>
-        </div>
-      </div>
-    </section>
   </main>
   <footer class="main-width">
     <div class="logo-links">
