fixed redirection links and changed to relative paths

--- a/admin/auth/AdminRegister.html
+++ b/admin/auth/AdminRegister.html
@@ -9,7 +9,7 @@
       href="../../images/VOUGECART_light.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="Adminlogin.css" />
+    <link rel="stylesheet" href="./Adminlogin.css" />
     <link rel="stylesheet" href="../../css/font.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
@@ -64,10 +64,10 @@
         <button type="submit">Create Account</button>
         <p>
           Already have an account?
-          <a href="Adminlogin.html" class="signup-link">Sign in</a>
+          <a href="./Adminlogin.html" class="signup-link">Sign in</a>
         </p>
       </form>
     </div>
-    <script src="js/AdminRegister.js"></script>
+    <script src="./js/AdminRegister.js"></script>
   </body>
 </html>
