--- a/admin/auth/Adminlogin.html
+++ b/admin/auth/Adminlogin.html
@@ -13,7 +13,7 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="Adminlogin.css" />
+    <link rel="stylesheet" href="./Adminlogin.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -66,7 +66,7 @@
         <button type="submit">Sign in</button>
         <p>
           Don't have an account yet?
-          <a href="AdminRegister.html" class="signup-link">Sign up</a>
+          <a href="./AdminRegister.html" class="signup-link">Sign up</a>
         </p>
       </form>
     </div>
