--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link
       rel="shortcut icon"
-      href="/B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
+      href="./images/VOUGECART_light.png"
       type="image/x-icon"
     />
   </head>
@@ -93,7 +93,7 @@
     <section class="background-banner">
       <div class="background-layer" id="bg1"></div>
       <div class="background-layer fade-out" id="bg2"></div>
-  </section>
+    </section>
     <main>
       <div id="category-section">
         <div class="category-header">
@@ -155,10 +155,7 @@
     <footer class="main-width">
       <div class="logo-links">
         <div class="footer-about">
-          <img
-            src="/B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
-            alt="Logo"
-          />
+          <img src="./images/VOUGECART_light.png" alt="Logo" />
           <h3>
             Your One-Stop Destination for Everything You Need, Anytime,
             Anywhere!
