--- a/users/products/products.html
+++ b/users/products/products.html
@@ -14,7 +14,7 @@
     />
     <link
       rel="shortcut icon"
-      href="/B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
+      href="../../images/VOUGECART_light.png"
       type="image/x-icon"
     />
   </head>
@@ -35,10 +35,7 @@
 
       <nav class="main-width">
         <div class="logo">
-          <img
-            src="/B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
-            alt="logo"
-          />
+          <img src="../../images/VOUGECART_light.png" alt="logo" />
           <p>VOGUECART</p>
         </div>
 
@@ -222,10 +219,7 @@
     <footer class="main-width">
       <div class="logo-links">
         <div class="footer-about">
-          <img
-            src="/B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
-            alt="Logo"
-          />
+          <img src="../../images/VOUGECART_light.png" alt="Logo" />
           <h3>
             Your One-Stop Destination for Everything You Need, Anytime,
             Anywhere!
@@ -267,7 +261,7 @@
       </div>
     </footer>
 
-    <script src="js/products.js"></script>
+    <script src="./js/products.js"></script>
     <script src="../../js/navbar.js"></script>
   </body>
 </html>
