--- a/admin/dashboard/dashboard.html
+++ b/admin/dashboard/dashboard.html
@@ -2,25 +2,33 @@
 
 <html lang="en" dir="ltr">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="VOUGECART.png">
-    
-  <title>Responsiive Admin Dashboard | CodingLab</title>
-    <link rel="stylesheet" href="style.module.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../../images/VOUGECART_light.png"
+    />
+
+    <title>Responsiive Admin Dashboard | CodingLab</title>
+    <link rel="stylesheet" href="./style.module.css" />
     <!-- Boxicons CDN Link -->
-    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
+    <link
+      href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <div class="sidebar">
       <div class="logo-details">
-        <i class="VOUGECART.png"></i>
-      
-        <img src='VOUGECART.png' alt='Dashboard Logo' style='width: 50px; height: auto;'>
-        <p style="color:white;">VOUGECART</p>
+        <i class="../../images/VOUGECART_light.png"></i>
+
+        <img
+          src="../../images/VOUGECART_light.png"
+          alt="Dashboard Logo"
+          style="width: 50px; height: auto"
+        />
+        <p style="color: white">VOUGECART</p>
       </div>
       <ul class="nav-links">
         <li>
@@ -102,7 +110,7 @@
           <i class="bx bx-search"></i>
         </div>
         <div class="profile-details">
-          <img src="images/profile.jpg" alt="" />
+          <img src="./images/profile.jpg" alt="" />
           <span class="admin_name">Prem Shahi</span>
           <i class="bx bx-chevron-down"></i>
         </div>
@@ -289,4 +297,3 @@
     </script>
   </body>
 </html>
-
