fixed redirection links and changed to relative paths

--- a/admin/auth/AdminRegister.html
+++ b/admin/auth/AdminRegister.html
@@ -9,6 +9,7 @@
       href="../../images/VOUGECART_light.png"
       type="image/x-icon"
     />
+    <base href="/" />
     <link rel="stylesheet" href="./Adminlogin.css" />
     <link rel="stylesheet" href="../../css/font.css" />
     <link
