--- a/admin/dashboard/dashboard.html
+++ b/admin/dashboard/dashboard.html
@@ -9,6 +9,7 @@
       href="../../images/VOUGECART_light.png"
     />
 
+    <base href="/" />
     <title>Responsiive Admin Dashboard | CodingLab</title>
     <link rel="stylesheet" href="./style.module.css" />
     <!-- Boxicons CDN Link -->
