--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="/" />
     <title>VogueCart</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./css/navbar.module.css" />
-    <link rel="stylesheet" href="./css/footer.module.css" />
+    <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/style.css" />
+    <link
+      rel="stylesheet"
+      href="B42_WEB_003_Web-Wizards/css/navbar.module.css"
+    />
+    <link
+      rel="stylesheet"
+      href="B42_WEB_003_Web-Wizards/css/footer.module.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -34,7 +41,10 @@
 
       <nav class="main-width">
         <div class="logo">
-          <img src="./images/VOUGECART_light.png" alt="logo" />
+          <img
+            src="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
+            alt="logo"
+          />
           <p>VOGUECART</p>
         </div>
 
@@ -155,7 +165,10 @@
     <footer class="main-width">
       <div class="logo-links">
         <div class="footer-about">
-          <img src="./images/VOUGECART_light.png" alt="Logo" />
+          <img
+            src="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
+            alt="Logo"
+          />
           <h3>
             Your One-Stop Destination for Everything You Need, Anytime,
             Anywhere!
@@ -199,5 +212,5 @@
   </body>
 </html>
 
-<script src="./js/index.js"></script>
-<script src="./js/navbar.js"></script>
+<script src="B42_WEB_003_Web-Wizards/js/index.js"></script>
+<script src="B42_WEB_003_Web-Wizards/js/navbar.js"></script>
