--- a/users/products/products.html
+++ b/users/products/products.html
@@ -3,18 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="/" />
     <title>VogueCart - Searched Product Lists</title>
-    <link rel="stylesheet" href="../../css/navbar.module.css" />
-    <link rel="stylesheet" href="../../css/font.module.css" />
-    <link rel="stylesheet" href="../../css/footer.module.css" />
-    <link rel="stylesheet" href="css/products.css" />
+    <link
+      rel="stylesheet"
+      href="B42_WEB_003_Web-Wizards/css/navbar.module.css"
+    />
+    <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/css/font.module.css" />
+    <link
+      rel="stylesheet"
+      href="B42_WEB_003_Web-Wizards/css/footer.module.css"
+    />
+    <link
+      rel="stylesheet"
+      href="B42_WEB_003_Web-Wizards/users/products/css/products.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
     <link
       rel="shortcut icon"
-      href="../../images/VOUGECART_light.png"
+      href="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
       type="image/x-icon"
     />
   </head>
@@ -35,7 +45,10 @@
 
       <nav class="main-width">
         <div class="logo">
-          <img src="../../images/VOUGECART_light.png" alt="logo" />
+          <img
+            src="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
+            alt="logo"
+          />
           <p>VOGUECART</p>
         </div>
 
@@ -219,7 +232,10 @@
     <footer class="main-width">
       <div class="logo-links">
         <div class="footer-about">
-          <img src="../../images/VOUGECART_light.png" alt="Logo" />
+          <img
+            src="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
+            alt="Logo"
+          />
           <h3>
             Your One-Stop Destination for Everything You Need, Anytime,
             Anywhere!
@@ -261,7 +277,7 @@
       </div>
     </footer>
 
-    <script src="./js/products.js"></script>
-    <script src="../../js/navbar.js"></script>
+    <script src="B42_WEB_003_Web-Wizards/users/products/js/products.js"></script>
+    <script src="B42_WEB_003_Web-Wizards/js/navbar.js"></script>
   </body>
 </html>
