--- a/admin/auth/Adminlogin.html
+++ b/admin/auth/Adminlogin.html
@@ -9,6 +9,7 @@
       href="../../images/VOUGECART_light.png"
       type="image/x-icon"
     />
+    <base href="/">
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
