--- a/admin/orders/OrdersManage.html
+++ b/admin/orders/OrdersManage.html
@@ -2,23 +2,17 @@
 
 <html lang="en" dir="ltr">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="stylesheet" href="./css/OrdersManage.css" />
     <meta charset="UTF-8" />
     <link
-      rel="icon"
-      type="image/x-icon"
-      href="../../images/VOUGECART_light.png"
+    rel="icon"
+    type="image/x-icon"
+    href="../../images/VOUGECART_light.png"
     />
-
+    <base href="/">
     <title>VOUGECART - Admin Order page</title>
+    <link rel="stylesheet" href="./css/OrdersManage.css" />
     <link rel="stylesheet" href="./style.module.css" />
+    <link rel="stylesheet" href="../../css/font.module.css" />
     <!-- Boxicons CDN Link -->
     <link
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
