--- a/users/products/individualProduct.html
+++ b/users/products/individualProduct.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="/">
     <title>VogueCart - Individual Product Page</title>
     <link rel="stylesheet" href="./css/individualProduct.css" />
     <link rel="stylesheet" href="../../css/navbar.module.css" />
