fixed redirection links and changed to relative paths of individual product page

--- a/users/products/individualProduct.html
+++ b/users/products/individualProduct.html
@@ -3,19 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/">
+    <base href="/" />
     <title>VogueCart - Individual Product Page</title>
-    <link rel="stylesheet" href="./css/individualProduct.css" />
-    <link rel="stylesheet" href="../../css/navbar.module.css" />
-    <link rel="stylesheet" href="../../css/footer.module.css" />
-    <link rel="stylesheet" href="../../css/font.module.css" />
+    <link
+      rel="stylesheet"
+      href="B42_WEB_003_Web-Wizards/users/products/css/individualProduct.css"
+    />
+    <link
+      rel="stylesheet"
+      href="B42_WEB_003_Web-Wizards/css/navbar.module.css"
+    />
+    <link
+      rel="stylesheet"
+      href="B42_WEB_003_Web-Wizards/css/footer.module.css"
+    />
+    <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/css/font.module.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
     <link
       rel="shortcut icon"
-      href="../../images/VOUGECART_light.png"
+      href="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
       type="image/x-icon"
     />
   </head>
@@ -37,7 +46,10 @@
 
       <nav class="main-width">
         <div class="logo">
-          <img src="../../images/VOUGECART_light.png" alt="logo" />
+          <img
+            src="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
+            alt="logo"
+          />
           <p>VOGUECART</p>
         </div>
 
@@ -97,7 +109,10 @@
     <footer class="main-width">
       <div class="logo-links">
         <div class="footer-about">
-          <img src="../../images/VOUGECART_light.png" alt="Logo" />
+          <img
+            src="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
+            alt="Logo"
+          />
           <h3>
             Your One-Stop Destination for Everything You Need, Anytime,
             Anywhere!
@@ -141,5 +156,5 @@
   </body>
 </html>
 
-<script src="./js/individualProduct.js"></script>
-<script src="/B42_WEB_003_Web-Wizards/js/navbar.js"></script>
+<script src="B42_WEB_003_Web-Wizards/users/products/js/individualProduct.js"></script>
+<script src="B42_WEB_003_Web-Wizards/js/navbar.js"></script>
