fixed redirection links and changed to relative paths of individual product page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <link
       rel="shortcut icon"
-      href="./images/VOUGECART_light.png"
+      href="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
       type="image/x-icon"
     />
   </head>
